--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -35,12 +35,21 @@ hr
     max-height: 400px
 
 #homeCarousel
-  //width: 100%
-  //min-height: 700px
-  //max-height: 700px
+  .img-div
+    width: 100%
+    max-height: 500px
+    text-align: center
+    margin-bottom: 10px
 
-  uib-carousel, uib-slide
-    //width: 100%
+    md-content
+      width: 100%
+      background-color: rgba(#000, .5)
+
+
+  h1
+    color: white
+    font-size: 75px
+
 
   .carousel-caption
     //margin-bottom: 400px
@@ -52,7 +61,7 @@ hr
   img
     margin: auto
     width: 100%
-    height: auto
+    max-height: 500px
     display: block
 
 
@@ -62,6 +71,60 @@ hr
     height: 200px
     width: auto
 
+  .img-div
+    background-image: url('/images/Black_background-2.jpg')
+    background-position: center
+    width: 100%
+    min-height: 500px
+    text-align: center
+    margin-bottom: 10px
+
+    md-content
+      width: 100%
+      background-color: rgba(#000, .5)
+
+
+  h1
+    color: white
+    font-size: 75px
 
 /* ------------ Contact Page ---------- */
+
+.img-div
+  background-image: url('/images/Black_background-2.jpg')
+  background-position: center
+  width: 100%
+  min-height: 500px
+  text-align: center
+  margin-bottom: 10px
+
+  md-content
+    width: 100%
+    background-color: rgba(#000, .5)
+
+
+  h1
+    color: white
+    font-size: 75px
+
+/* ------------ Info Page ------------- */
+
+.img-div
+  background-image: url('/images/Black_background-2.jpg')
+  background-position: center
+  width: 100%
+  min-height: 500px
+  text-align: center
+  margin-bottom: 10px
+
+  md-content
+    width: 100%
+    background-color: rgba(#000, .5)
+
+
+  h1
+    color: white
+    font-size: 75px
+
+
 
