--- a/views/partials/info.jade
+++ b/views/partials/info.jade
@@ -1,18 +1,13 @@
-div()
-  md-content
+div#info()
+  div.img-div( layout='column' layout-align='center center')
+    md-content(layout-padding)
+      h1 Information
+  md-content(layout-padding)
     div()
-      md-card
-        md-card-content
-          h1 C
+      h1 C
     div()
-      md-card
-        md-card-content
-          h1 O
+      h1 O
     div()
-      md-card
-        md-card-content
-          h1 S
+      h1 S
     div()
-      md-card
-        md-card-content
-          h1 T
+      h1 T
