Configured layout for mobile. Setup heroku deployment

--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -31,13 +31,21 @@ hr
 
 #homeLayout
   md-card
-    min-height: 400px
-    max-height: 400px
-
-#homeCarousel
-  .img-div
-    width: 100%
+    min-height: 500px
     max-height: 500px
+
+    .md-card-content
+      min-height: 250px
+      max-height: 250px
+
+    //.md-button
+      color: white
+
+  .img-div
+    background-image: url('/images/Black_background-2.jpg')
+    background-position: center
+    width: 100%
+    min-height: 700px
     text-align: center
     margin-bottom: 10px
 
@@ -46,24 +54,39 @@ hr
       background-color: rgba(#000, .5)
 
 
-  h1
-    color: white
-    font-size: 75px
-
-
-  .carousel-caption
-    //margin-bottom: 400px
-    background-color: rgba(#000, .5)
-    
     h1
       color: white
+      font-size: 60px
 
-  img
+#homeAbout
+  .md-card-image
     margin: auto
-    width: 100%
-    max-height: 500px
-    display: block
+    height: 200px
+    width: auto
 
+#homeExp
+  .img-div
+    background-image: url('/images/Black_background-2.jpg')
+    background-position: center
+    width: 100%
+    min-height: 650px
+    text-align: center
+    margin-bottom: 10px
+
+    md-content
+      width: 50%
+      background-color: rgba(#000, .5)
+
+
+    h1
+      color: white
+      font-size: 60px
+
+    p
+      color: white
+      font-size: 26px
+
+/* ----------- About Page ---------- */
 
 #about
   .md-card-image
@@ -75,7 +98,7 @@ hr
     background-image: url('/images/Black_background-2.jpg')
     background-position: center
     width: 100%
-    min-height: 500px
+    min-height: 575px
     text-align: center
     margin-bottom: 10px
 
@@ -86,7 +109,7 @@ hr
 
   h1
     color: white
-    font-size: 75px
+    font-size: 60px
 
 /* ------------ Contact Page ---------- */
 
@@ -94,7 +117,7 @@ hr
   background-image: url('/images/Black_background-2.jpg')
   background-position: center
   width: 100%
-  min-height: 500px
+  min-height: 575px
   text-align: center
   margin-bottom: 10px
 
@@ -105,7 +128,7 @@ hr
 
   h1
     color: white
-    font-size: 75px
+    font-size: 60px
 
 /* ------------ Info Page ------------- */
 
@@ -113,7 +136,7 @@ hr
   background-image: url('/images/Black_background-2.jpg')
   background-position: center
   width: 100%
-  min-height: 500px
+  min-height: 575px
   text-align: center
   margin-bottom: 10px
 
@@ -124,7 +147,7 @@ hr
 
   h1
     color: white
-    font-size: 75px
+    font-size: 60px
 
 
 
