--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -1,13 +1,13 @@
 div#about()
   div
-    div
-      div.img-div( layout='column' layout-align='center center')
-        md-content(layout-padding)
-          h1 About Us
+    div.img-div( layout='column' layout-align='center center')
+      md-content(layout-padding)
+        h1 About Us
+    md-content
       div(layout-gt-md='row')
-        div(style='margin: auto;' flex='40')
-          img(src='images/black-leather-texture-hd-free-wallpaper_1242103205.jpg' style='height: auto; max-width: 340px; display: block; margin: auto;')
-        div(style='border-left: 1px solid black; padding-left: 10px;' flex)
+        div(style='margin: auto;' flex-gt-md='40')
+          img(src='images/Black_background-2.jpg' style='height: auto; max-width: 340px; display: block; margin: auto;')
+        div(style='padding-left: 10px;' flex layout-margin)
           md-content
             p.
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in neque nulla. Quisque quis maximus tortor. Nunc vitae consectetur lectus, sed rutrum libero. Pellentesque lacinia mauris nibh, non blandit arcu ornare eu. Curabitur congue sit amet tortor vel elementum. Quisque bibendum pellentesque ante, a accumsan dui malesuada ut. Nullam nec dolor elit. In efficitur, arcu eu mollis fringilla, purus sapien lacinia ante, a ullamcorper magna nulla sit amet quam.
