--- a/views/partials/contact-thanks.jade
+++ b/views/partials/contact-thanks.jade
@@ -1,3 +1,3 @@
-md-content
+md-content(layout-padding)
   h2 Thanks for the submission
   p A member of our customer service team will be in touch shortly!
