Added topnav and started blog page

--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -14,11 +14,24 @@ hr
   width: 100%
   overflow: scroll
   padding-bottom: 85px
-  background-color: #f1f1f1
+  //background-color: #f1f1f1
+
+.container
+  max-width: 1250px
+  margin: auto
 
 #mainContainer
   overflow: hidden
 
+#topnav
+  h3
+    font-size: 20px
+
+  .active
+    border-bottom: 3px solid black
+
+    h3
+      font-size: 28px
 
 
 #leftNav
@@ -58,6 +71,9 @@ hr
       color: white
       font-size: 60px
 
+
+
+
 #homeAbout
   .md-card-image
     margin: auto
@@ -74,7 +90,7 @@ hr
     margin-bottom: 10px
 
     md-content
-      width: 50%
+      width: 70%
       background-color: rgba(#000, .5)
 
 
@@ -131,6 +147,18 @@ hr
     font-size: 60px
 
 /* ------------ Info Page ------------- */
+
+#info
+  h1
+    font-size: 75px
+    font-weight: 500
+  p
+    font-size: 25px
+
+  margin-bottom: 30px
+
+  h2
+    font-size: 35px
 
 .img-div
   background-image: url('/images/Black_background-2.jpg')
