--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -3,8 +3,8 @@ div#about()
     div.img-div( layout='column' layout-align='center center')
       md-content(layout-padding)
         h1 About Us
-    md-content
-      div(layout-gt-md='row')
+    md-content.container
+      div(layout-margin layout-gt-md='row')
         div(style='margin: auto;' flex-gt-md='40')
           img(src='images/Black_background-2.jpg' style='height: auto; max-width: 340px; display: block; margin: auto;')
         div(style='padding-left: 10px;' flex layout-margin)
