--- a/views/partials/contact.jade
+++ b/views/partials/contact.jade
@@ -6,7 +6,7 @@ div(ng-controller="ContactCtrl")
           h1 Contact Us!
       h4(style='text-align: center; padding-top: 10px') Please read and fill out the contact form below.
       hr
-      div(ayout-padding)
+      div.container(layout-padding)
         form#contact( name='contactForm' role="form" ng-submit="saveContact()")
           md-content
             div(layout-gt-lg='row' layout-margin layout-padding)
