--- a/views/partials/info.jade
+++ b/views/partials/info.jade
@@ -2,23 +2,26 @@ div#info(layout='column')
   div.img-div( layout='column' layout-align='center center')
     md-content(layout-padding)
       h1 Information
-  md-content( layout='row' layout-align='center center' style='border: 1px solid black;')
-    div(layout='column' layout-padding style='max-width: 1000px;')
-      div()
+  md-content.container( layout='row' layout-align='center center')
+    div(layout='column' layout-padding layout-margin)
+      div(style='margin: auto')
+        h2 Whats in the name?
+      div(layout='row' layout-margin layout-padding)
         h1 C
         p.
           Cras semper, tortor quis scelerisque faucibus, lacus tellus imperdiet velit, vitae accumsan turpis nunc a leo. Donec porta tellus vel purus mollis, sit amet convallis tortor tempor.
           Duis vel ultricies massa. Morbi lacinia ipsum vitae tincidunt tincidunt. Proin interdum justo eget ante feugiat, a semper arcu iaculis. Etiam hendrerit lacus at blandit efficitur.
+      div(layout='row' layout-margin layout-padding)
         h1 O
         p.
           Cras semper, tortor quis scelerisque faucibus, lacus tellus imperdiet velit, vitae accumsan turpis nunc a leo. Donec porta tellus vel purus mollis, sit amet convallis tortor tempor.
           Duis vel ultricies massa. Morbi lacinia ipsum vitae tincidunt tincidunt. Proin interdum justo eget ante feugiat, a semper arcu iaculis. Etiam hendrerit lacus at blandit efficitur.
-      div()
+      div(layout='row' layout-margin layout-padding)
         h1 S
         p.
           Cras semper, tortor quis scelerisque faucibus, lacus tellus imperdiet velit, vitae accumsan turpis nunc a leo. Donec porta tellus vel purus mollis, sit amet convallis tortor tempor.
           Duis vel ultricies massa. Morbi lacinia ipsum vitae tincidunt tincidunt. Proin interdum justo eget ante feugiat, a semper arcu iaculis. Etiam hendrerit lacus at blandit efficitur.
-      div()
+      div(layout='row' layout-margin layout-padding)
         h1 T
         p.
           Cras semper, tortor quis scelerisque faucibus, lacus tellus imperdiet velit, vitae accumsan turpis nunc a leo. Donec porta tellus vel purus mollis, sit amet convallis tortor tempor.
