Changed nav bar, added footer

--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -5,7 +5,7 @@ html, body
   overflow: hidden
 
 
-hr
+//hr
   border-bottom: 1px solid #ba68c8
 
 #mainView
@@ -14,7 +14,7 @@ hr
   width: 100%
   overflow: scroll
   padding-bottom: 85px
-  //background-color: #f1f1f1
+  background-color: white
 
 .container
   max-width: 1250px
@@ -29,10 +29,6 @@ hr
 
   .active
     border-bottom: 3px solid black
-
-    h3
-      font-size: 28px
-
 
 #leftNav
   .md-button
@@ -177,5 +173,8 @@ hr
     color: white
     font-size: 60px
 
+/* ------------ Footer ------------- */
+
+footer
 
 
