--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -17,3 +17,4 @@ div#about()
               Sed nec tortor ut mi posuere finibus. Duis odio nibh, congue vel turpis in, lobortis lacinia nisl. Maecenas risus tellus, finibus ut facilisis non, venenatis aliquam augue. Curabitur fringilla et purus eu efficitur. Quisque ut mattis justo. Nunc diam massa, posuere et dui et, dapibus posuere nisi. Nam commodo suscipit est, sed semper augue efficitur sed. Sed auctor quis dolor id rutrum.
               Nulla id venenatis nulla, eget ultricies dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis volutpat dignissim lacus vel tempor. Ut dignissim consectetur nisi non rhoncus. Curabitur volutpat volutpat neque non mollis. Nam accumsan vitae metus vel dapibus. In convallis eros a neque semper vestibulum. In hac habitasse platea dictumst
 
+footer(ng-include="'partials/footer.jade'")
