--- a/views/partials/home.jade
+++ b/views/partials/home.jade
@@ -56,3 +56,4 @@ div()#homeLayout
           h1(hide-xs hide-sm) Experience
           p.
             With over 20 Years of experience, Benny Forehand Knows his stuff
+footer(ng-include="'partials/footer.jade'")
