--- a/views/partials/info.jade
+++ b/views/partials/info.jade
@@ -26,3 +26,4 @@ div#info(layout='column')
         p.
           Cras semper, tortor quis scelerisque faucibus, lacus tellus imperdiet velit, vitae accumsan turpis nunc a leo. Donec porta tellus vel purus mollis, sit amet convallis tortor tempor.
           Duis vel ultricies massa. Morbi lacinia ipsum vitae tincidunt tincidunt. Proin interdum justo eget ante feugiat, a semper arcu iaculis. Etiam hendrerit lacus at blandit efficitur.
+footer(ng-include="'partials/footer.jade'")
