Added edit option for blogs from webpage

--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -17,7 +17,13 @@ html, body
   background-color: white
 
 .container
+  width: 1250px
   max-width: 1250px
+  margin: auto
+
+.wideContainer
+  width: 1550px
+  max-width: 1550px
   margin: auto
 
 #mainContainer
