--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -1,3 +1,3 @@
-footer(layout='row' layout-align='center center' layout-padding layout-margin)
+footer.md-whiteframe-z2(layout='row' layout-align='center center' layout-padding layout-margin)
   div()
     p Designed and built by Benjamin Forehand Jr
