--- a/views/partials/home.jade
+++ b/views/partials/home.jade
@@ -55,5 +55,5 @@ div()#homeLayout
         md-content( layout-padding)
           h1(hide-xs hide-sm) Experience
           p.
-            With over 20 Years of experience, Benny Forehand Knows his stuff
+            With over 20 Years of experience, Cost Consultants stands behind their name!
 footer(ng-include="'partials/footer.jade'")
