--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -5,7 +5,7 @@ html, body
   overflow: hidden
 
 
-//hr
+hr
   border-bottom: 1px solid #ba68c8
 
 #mainView
@@ -13,7 +13,7 @@ html, body
   min-height: 100vh
   width: 100%
   overflow: scroll
-  padding-bottom: 85px
+  padding-bottom: 110px
   background-color: white
 
 .container
